Brighten HTML links.

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,7 +14,7 @@ $text-color:       #ddd !default;
 $background-color: #131d28 !default;
 $code-background-color: #182533 !default;
 $syntax-background-color: $code-background-color !default;
-$brand-color:      #2a7ae2 !default;
+$brand-color:      #5aaaff !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
